[package]
name = "directx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.7", features = ["std", "d3d11"] }
windows = { version = "0.34.0", features = ["Win32_Graphics_Dxgi"] }